DBの接続設定を追加

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -334,16 +334,23 @@ play.db {
 # Anorm: https://www.playframework.com/documentation/latest/ScalaAnorm
 #
 db {
-  # You can declare as many datasources as you want.
-  # By convention, the default datasource is named `default`
+  # jdbcはcharacterEncodingにutf8mb4を指定できない
+  # mysqlサーバ側でutf8mb4を指定しておくと(character_set_server=utf8mb4)jdbc側でハンドリングしてutf8mb4として接続してくれる
+  # https://dev.mysql.com/doc/connector-j/5.1/en/connector-j-reference-charsets.html
+  default {
+    # データベースの接続設定
+    # http://skinny-framework.org/documentation/orm.html
+    driver = "com.mysql.jdbc.Driver"
+    url = "jdbc:mysql://localhost:3306/db_production?useSSL=false"
+    url = ${?DB_URL}
+    username = "root"
+    username = ${?DB_USER}
+    password = ""
+    password = ${?DB_PASSWORD}
 
-  # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
-  #default.driver = org.h2.Driver
-  #default.url = "jdbc:h2:mem:play"
-  #default.username = sa
-  #default.password = ""
-
-  # You can turn on SQL logging for any datasource
-  # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
-  #default.logSql=true
+    # スレッドプールの設定
+    poolInitialSize=10
+    poolMaxSize=20
+    poolValidationQuery="select 1"
+  }
 }
