ScalikeJDBCの設定を追加

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,6 +59,10 @@ play.modules {
   # If there are any built-in modules that you want to disable, you can list them here.
   #enabled += my.application.Module
 
+  # アプリケーション起動時にコネクションプールを初期化する Module
+  # scalikejdbc-play-initializer ライブラリを build.sbt で定義しておく必要がある
+  enabled += "scalikejdbc.PlayModule"
+
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
 }
@@ -352,5 +356,39 @@ db {
     poolInitialSize=10
     poolMaxSize=20
     poolValidationQuery="select 1"
+  }
+}
+
+# ScalikeJDBC の設定
+# http://scalikejdbc.org/documentation/configuration.html
+scalikejdbc {
+  global {
+    # SQL 実行時のログ出力の設定
+    loggingSQLAndTime {
+      # ログ出力の有効化／無効化
+      # ログ出力が不要なら false にする
+      enabled = true
+
+      # 通常の SQL クエリの出力ログレベル
+      # logback.xml の scalikejdbc の部分の設定で、ログ出力するかどうか制御する
+      # ここで debug レベルで出力するよう設定して logback.xml で info と記述すると、ログ出力を抑制できる
+      logLevel = debug
+
+      # スロークエリをログ出力有効化／無効化
+      # スロークエリのログ出力が不要なら false にする
+      warningEnabled = true
+
+      # スロークエリと判断する実行時間
+      # デフォルト値は 3000 ミリ秒のようである
+      # https://github.com/scalikejdbc/scalikejdbc/blob/2.5.x/scalikejdbc-core/src/main/scala/scalikejdbc/LoggingSQLAndTimeSettings.scala#L13
+      warningThresholdMillis = 1000
+
+      # スロークエリの出力ログレベル
+      # Play は標準のログレベルは warn のようなので、ココは warn 以上にしておくのが無難
+      warningLogLevel = warn
+      # ログを一行で出力するかどうかを有効化／無効化
+      # デフォルト false で、標準ではどのクラスから実行されたかというスタックトレースも出してくれる
+      singleLineMode=true
+    }
   }
 }
