flywayのマイグレーションファイルのパス設定とOutOfOrderの設定を追加

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -392,3 +392,16 @@ scalikejdbc {
     }
   }
 }
+
+# マイグレーションツールflywayの設定
+# 設定値の項目を増やす場合はそれぞれの設定読み込み箇所も追加が必要
+flyway {
+  # マイグレーションファイルのパスをflyway-play風にカスタマイズ
+  locations = [ "filesystem:./conf/db/migration/default" ]
+
+  # マイグレーションのバージョン番号を数値のインクリメントだとコンフリクトしやすいので
+  # Rails風にタイムスタンプベースで運用するためOutOfOrderを有効化する。
+  # デフォルトOutOfOrder無効だとマージ順によって抜け番になると無視される。
+  # http://tototoshi.hatenablog.com/entry/2015/01/27/234314
+  outOfOrder = true
+}
