RequestLoggingFilterを有効化する設定を追加

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -220,6 +220,10 @@ play.filters {
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   # enabled += filters.ExampleFilter
 
+  # HTTPリクエストとレスポンスのログ出力を行う
+  # 障害対応時に役に立つログを出力するので、有効化することを強く推奨
+  enabled += library.filter.RequestLoggingFilter
+
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilters
 
