ErrorHandlerを有効化する設定を追加

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -120,6 +120,20 @@ play.http {
   # If null, will attempt to load a class called ErrorHandler in the root package,
   #errorHandler = null
 
+  # エラーハンドラーの設定
+  #
+  # デフォルトではapp/ErrorHandler.scalaが読み込まれるが
+  # 置き場を変更しているため、明示的に設定を行っている。
+  #
+  # アプリケーションコード内で例外を明示的にキャッチしない場合、
+  # ここで設定したクラスが例外をハンドリングすることになる。
+  #
+  # 例外ハンドリング時の挙動を変更したい場合、独自でエラーハンドラーを定義し、
+  # ここの設定を書き換えると、変更することが可能である。
+  #
+  # https://www.playframework.com/documentation/2.5.x/ScalaErrorHandling#Supplying-a-custom-error-handler
+  errorHandler = library.error_handler.ErrorHandler
+
   ## Session & Flash
   # https://www.playframework.com/documentation/latest/JavaSessionFlash
   # https://www.playframework.com/documentation/latest/ScalaSessionFlash
