シークレットキーを環境変数から読み込むよう設定

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,11 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.http.secret.key = "changeme"
+
+# 本番環境では環境変数で Secret key を渡す
+# ちなみに、ローカルで使う下記のキーは sbt playGenerateSecret で生成した
+play.http.secret.key = ";]h^AtjNlNk8lDXDE@Qu<EBrn>7G5/weHDa6f>y2kg;JM/Q@n0X00/8>b=P3QlSe"
+play.http.secret.key = ${?APPLICATION_SECRET}
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
