不要なダブルクォーテーションを削除

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,7 +65,7 @@ play.modules {
 
   # アプリケーション起動時にコネクションプールを初期化する Module
   # scalikejdbc-play-initializer ライブラリを build.sbt で定義しておく必要がある
-  enabled += "scalikejdbc.PlayModule"
+  enabled += scalikejdbc.PlayModule
 
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
