アクセスログのremoteAddressにnginxの実IPではなくX-Forwarded-ForのIPを記録するよう設定

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -138,6 +138,23 @@ play.http {
   # https://www.playframework.com/documentation/2.5.x/ScalaErrorHandling#Supplying-a-custom-error-handler
   errorHandler = library.error_handler.ErrorHandler
 
+  # アクセスログのremoteAddressにnginxの実IPではなくX-Forwarded-ForのIPを記録する。
+  # playのアクセスログにX-Forwarded-Forを出力するにはミニマム以下3つが必要。
+  #
+  # 1. nginxでset_real_ip_from '10.0.0.0/8'; でALBのアドレスを信用する
+  # 2. nginxで proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; する
+  # 3. playのapplication.confでhttp.forwardedの設定を追加し、trustedProxiesでnginxのIPを信用する
+  #
+  # https://github.com/playframework/playframework/blob/2.5.x/framework/src/play/src/main/resources/reference.conf#L62-L90
+  forwarded = {
+    version = "x-forwarded"
+    trustedProxies = [
+      "172.16.0.0/12", # ECSのdockerの場合
+      "192.168.0.0/16", # ローカルのdockerの場合
+      "127.0.0.1", # デバッグ用
+    ]
+  }
+
   ## Session & Flash
   # https://www.playframework.com/documentation/latest/JavaSessionFlash
   # https://www.playframework.com/documentation/latest/ScalaSessionFlash
