データベースの接続設定に文字コードと照合順序を指定するよう変更

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -384,7 +384,7 @@ db {
     # データベースの接続設定
     # http://skinny-framework.org/documentation/orm.html
     driver = "com.mysql.jdbc.Driver"
-    url = "jdbc:mysql://localhost:3306/db_production?useSSL=false"
+    url = "jdbc:mysql://localhost:3306/db_production?characterEncoding=UTF8&connectionCollation=utf8mb4_bin&useSSL=false"
     url = ${?DB_URL}
     username = "root"
     username = ${?DB_USER}
