--- a/conf/test.conf
+++ b/conf/test.conf
@@ -2,6 +2,6 @@ include "application.conf"
 
 db {
   default {
-    url = "jdbc:mysql://localhost:3306/db_test?useSSL=false"
+    url = "jdbc:mysql://localhost:3306/db_test?characterEncoding=UTF8&connectionCollation=utf8mb4_bin&useSSL=false"
   }
 }
