error_handlerパッケージをerrorhandlerにリネーム

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -136,7 +136,7 @@ play.http {
   # ここの設定を書き換えると、変更することが可能である。
   #
   # https://www.playframework.com/documentation/2.5.x/ScalaErrorHandling#Supplying-a-custom-error-handler
-  errorHandler = library.error_handler.ErrorHandler
+  errorHandler = library.errorhandler.ErrorHandler
 
   # アクセスログのremoteAddressにnginxの実IPではなくX-Forwarded-ForのIPを記録する。
   # playのアクセスログにX-Forwarded-Forを出力するにはミニマム以下3つが必要。
