デフォルトのフィルターをすべて無効化

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -251,6 +251,11 @@ play.cache {
 #
 play.filters {
 
+  # デフォルトのフィルターをすべて無効化
+  # これを入れておかないと、nginxと通信できない
+  # https://www.playframework.com/documentation/2.6.x/Migration26#Disabling-Default-Filters
+  enabled = []
+
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   # enabled += filters.ExampleFilter
