--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,12 +100,17 @@ jobs:
           paths:
             - "/opt/app/project/target"
 
+      # root プロジェクトから共通ライブラリを aggregate 対象から除外したので、明示的にプロジェクトを指定して実行
+      - run:
+          name: Test Library
+          command: cat /dev/null | sbt "project library" test:test
+
       # CI 高速化のため master のみカバレッジを取得
       - run:
           name: Test
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              cat /dev/null | sbt coverage test:test coverageReport codacyCoverage;
+              cat /dev/null | sbt "project root" coverage test:test coverageReport codacyCoverage;
             else
-              cat /dev/null | sbt test:test;
+              cat /dev/null | sbt "project root" test:test;
             fi
