--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,13 +58,10 @@ jobs:
             - project-{{ .Environment.CACHE_KEY }}-{{ checksum "project/Dependencies.scala" }}
             - project-{{ .Environment.CACHE_KEY }}-
 
-      # フォーマットをチェック
+      # コンパイルしてフォーマットをチェック
       - run:
-          name: Scalafmt test
-          command: cat /dev/null | sbt "scalafmt::test"
-
-      # コンパイルを一旦走らせる
-      - run: cat /dev/null | sbt test:compile
+          name: Compile and scalafmt test
+          command: cat /dev/null | sbt test:compile scalafmt::test
 
       - run:
           # MySQLの起動チェック
